阶段四：将 /new /reset 改为 session summary